# EXPARCIAL2_JuanIgnacio_Gonzalez

./: CMakeLists.txt  README.md  main.cpp
Ejercicio1/: ej1.cpp  ej1.h
Ejercicio2/: ej2.cpp  ej2.h
Ejercicio3/: ej3.cpp  ej3.h
Ejercicio4/: ej4.cpp  ej4.h
