cmake_minimum_required(VERSION 3.29)
project(EXPARCIAL2_JuanIgnacio_Gonzalez)

set(CMAKE_CXX_STANDARD 14)

add_executable(EXPARCIAL2_JuanIgnacio_Gonzalez
    .idea/.gitignore
    .idea/vcs.xml
    .idea/workspace.xml
    main.cpp
    README.md
        Ejercicio1/ej1.cpp
        Ejercicio2/ej2.cpp
        Ejercicio3/ej3.cpp
        Ejercicio4/ej4.cpp)
